--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <span class="author-block">
                   <a href="https://scholar.google.com.hk/citations?user=aJPO514AAAAJ&hl=zh-CN&oi=ao" target="_blank">Xiaodong Gu<sup>1*</sup></a>,</span>
                   <span class="author-block">
-                    <a href="https://lingtengqiu.github.io/" target="_blank">Lingteng Qiu<sup>1,2</sup></a>,</span>
+                    <a href="https://lingtengqiu.github.io/" target="_blank">Lingteng Qiu<sup>2,1</sup></a>,</span>
                     <span class="author-block">
                       <a href="dy283090@alibaba-inc.com" target="_blank">Yuan Dong<sup>1</sup></a>,</span>
                         <span class="author-block">
@@ -112,7 +112,7 @@
                                   <span class="author-block">
                                     <a href="siyuzhu@fudan.edu.cn" target="_blank">Siyu Zhu<sup>3</sup></a>,</span>
                                       <span class="author-block">
-                                        <a href="https://research.cs.washington.edu/istc/lfb/" target="_blank">Zilong Dong<sup>1</sup></a>,</span>
+                                        <a href="https://scholar.google.com/citations?user=GHOQKCwAAAAJ&hl=zh-CN&oi=ao" target="_blank">Zilong Dong<sup>1</sup></a>,</span>
                                         <span class="author-block">
                                           <a href="https://research.cs.washington.edu/istc/lfb/" target="_blank">Liefeng Bo<sup>1</sup></a>,</span>
                                             <span class="author-block">
