--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                     <!-- Video link -->
                     <span class="link-block">
-                      <a href="" target="_blank"
+                      <a href="https://www.youtube.com/watch?v=zxjX5p0p0Ks" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fab fa-youtube"></i>
