--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/hitsz-zuoqi/VideoMV" target="_blank"
+                    <a href="https://github.com/alibaba/VideoMV" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
