--- a/index.html
+++ b/index.html
@@ -493,6 +493,20 @@ By further fine-tuning, our approach outperforms existing state-of-the-art metho
 </section>
 <!-- End video carousel -->
 
+<!--BibTex citation -->
+<section class="section" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>@misc{zuo2024videomv,
+      title={VideoMV: Consistent Multi-View Generation Based on Large Video Generative Model}, 
+      author={Qi Zuo and Xiaodong Gu and Lingteng Qiu and Yuan Dong and Zhengyi Zhao and Weihao Yuan and Rui Peng and Siyu Zhu and Zilong Dong and Liefeng Bo and Qixing Huang},
+      year={2024},
+      eprint={2403.12010},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}</code></pre>
+  </div>
+</section>
 
 
   <footer class="footer">
